@@ -35,6 +35,7 @@
 
 /Makefile.in
 /include/Makefile.in
+/libc/Makefile.in
 
 ########################
 # To build out of root #
@@ -90,6 +91,8 @@
 
 /Makefile
 /include/Makefile
+/libc/Makefile
+
 /include/kernaux.h
 /include/kernaux/console.h
 
