@@ -65,7 +65,6 @@ zero). Work-in-progress APIs can change at any time.
     * Code from [https://github.com/mpaland/printf](https://github.com/mpaland/printf). Thank you!
     * [Example](/examples/printf_fmt.c)
 * Usual functions
-  * [libc replacement](/include/kernaux/libc.h) (*stable since* **0.1.0**)
   * [itoa/ftoa replacement](/include/kernaux/ntoa.h) (*stable since* **0.1.0**, *non-breaking since* **?.?.?**)
     * [Example](/examples/ntoa.c)
   * [printf replacement](/include/kernaux/printf.h) (*stable since* **0.1.0**)
@@ -74,6 +73,10 @@ zero). Work-in-progress APIs can change at any time.
     * [vprintf](/examples/printf_va.c)
     * [snprintf](/examples/snprintf.c)
     * [vsnprintf](/examples/snprintf_va.c)
+* libc replacement
+  * [ctype.h](/libc/ctype.h)
+  * [stdlib.h](/libc/stdlib.h)
+  * [string.h](/libc/string.h)
 
 
 
@@ -98,22 +101,8 @@ stable options.
 
 #### Packages
 
-* `--with-libc-all` - provides the replacement for some standard C functions.
-  Useful in freestanding environment, where no libc is present. You can also
-  separately include or exclude components:
-  * `--with[out]-libc-atoi`
-  * `--with[out]-libc-isdigit`
-  * `--with[out]-libc-isspace`
-  * `--with[out]-libc-memcpy`
-  * `--with[out]-libc-memmove`
-  * `--with[out]-libc-memset`
-  * `--with[out]-libc-strcmp`
-  * `--with[out]-libc-strcpy`
-  * `--with[out]-libc-strlen`
-  * `--with[out]-libc-strncmp`
-  * `--with[out]-libc-strncpy`
-  * `--with[out]-libc-strnlen`
-  * `--with[out]-libc-strstr`
+* `--with-libc` - provides the replacement for some standard C functions.
+  Useful in freestanding environment, where no libc is present.
 
 ### Default options
 
@@ -170,7 +159,7 @@ without it in `$PATH`:
 ./configure \
   --host='i386-elf' \
   --enable-freestanding \
-  --with-libc-all \
+  --with-libc \
   AR="$(which i386-elf-ar)" \
   CC="$(which i386-elf-gcc)" \
   RANLIB="$(which i386-elf-ranlib)"
