@@ -42,20 +42,7 @@ AC_ARG_WITH(  [printf-fmt],   AS_HELP_STRING([--without-printf-fmt],  [without p
 AC_ARG_WITH(  [units],        AS_HELP_STRING([--without-units],       [without measurement units utils]))
 
 dnl Packages (disabled by default)
-AC_ARG_WITH(  [libc-all],     AS_HELP_STRING([--with-libc-all],       [with libc replacement]))
-AC_ARG_WITH(  [libc-atoi],    AS_HELP_STRING([--with-libc-atoi],      [with atoi replacement]))
-AC_ARG_WITH(  [libc-isdigit], AS_HELP_STRING([--with-libc-isdigit],   [with isdigit replacement]))
-AC_ARG_WITH(  [libc-isspace], AS_HELP_STRING([--with-libc-isspace],   [with isspace replacement]))
-AC_ARG_WITH(  [libc-memcpy],  AS_HELP_STRING([--with-libc-memcpy],    [with memcpy replacement]))
-AC_ARG_WITH(  [libc-memmove], AS_HELP_STRING([--with-libc-memmove],   [with memmove replacement]))
-AC_ARG_WITH(  [libc-memset],  AS_HELP_STRING([--with-libc-memset],    [with memset replacement]))
-AC_ARG_WITH(  [libc-strcmp],  AS_HELP_STRING([--with-libc-strcmp],    [with strcmp replacement]))
-AC_ARG_WITH(  [libc-strcpy],  AS_HELP_STRING([--with-libc-strcpy],    [with strcpy replacement]))
-AC_ARG_WITH(  [libc-strlen],  AS_HELP_STRING([--with-libc-strlen],    [with strlen replacement]))
-AC_ARG_WITH(  [libc-strncmp], AS_HELP_STRING([--with-libc-strncmp],   [with strncmp replacement]))
-AC_ARG_WITH(  [libc-strncpy], AS_HELP_STRING([--with-libc-strncpy],   [with strncpy replacement]))
-AC_ARG_WITH(  [libc-strnlen], AS_HELP_STRING([--with-libc-strnlen],   [with strnlen replacement]))
-AC_ARG_WITH(  [libc-strstr],  AS_HELP_STRING([--with-libc-strstr],    [with strstr replacement]))
+AC_ARG_WITH(  [libc],         AS_HELP_STRING([--with-libc],           [with libc replacement]))
 
 
 
@@ -85,24 +72,6 @@ if test -z "$with_printf_fmt";  then with_printf_fmt=no;  fi
 if test -z "$with_units";       then with_units=no;       fi
 ])
 AS_IF([test "$with_all" = no], do_without_all)
-
-AC_DEFUN([do_with_libc_all],
-[
-if test -z "$with_libc_atoi";    then with_libc_atoi=yes;    fi
-if test -z "$with_libc_isdigit"; then with_libc_isdigit=yes; fi
-if test -z "$with_libc_isspace"; then with_libc_isspace=yes; fi
-if test -z "$with_libc_memcpy";  then with_libc_memcpy=yes;  fi
-if test -z "$with_libc_memmove"; then with_libc_memmove=yes; fi
-if test -z "$with_libc_memset";  then with_libc_memset=yes;  fi
-if test -z "$with_libc_strcmp";  then with_libc_strcmp=yes;  fi
-if test -z "$with_libc_strcpy";  then with_libc_strcpy=yes;  fi
-if test -z "$with_libc_strlen";  then with_libc_strlen=yes;  fi
-if test -z "$with_libc_strncmp"; then with_libc_strncmp=yes; fi
-if test -z "$with_libc_strncpy"; then with_libc_strncpy=yes; fi
-if test -z "$with_libc_strnlen"; then with_libc_strnlen=yes; fi
-if test -z "$with_libc_strstr";  then with_libc_strstr=yes;  fi
-])
-AS_IF([test "$with_libc_all" = yes], do_with_libc_all)
 
 
 
@@ -135,20 +104,7 @@ AS_IF([test "$with_printf_fmt"     = no ], [with_printf_fmt=no],      [with_prin
 AS_IF([test "$with_units"          = no ], [with_units=no],           [with_units=yes])
 
 dnl Packages (disabled by default)
-AS_IF([test "$with_libc_all"       = yes], [with_libc_all=yes],       [with_libc_all=no])
-AS_IF([test "$with_libc_atoi"      = yes], [with_libc_atoi=yes],      [with_libc_atoi=no])
-AS_IF([test "$with_libc_isdigit"   = yes], [with_libc_isdigit=yes],   [with_libc_isdigit=no])
-AS_IF([test "$with_libc_isspace"   = yes], [with_libc_isspace=yes],   [with_libc_isspace=no])
-AS_IF([test "$with_libc_memcpy"    = yes], [with_libc_memcpy=yes],    [with_libc_memcpy=no])
-AS_IF([test "$with_libc_memmove"   = yes], [with_libc_memmove=yes],   [with_libc_memmove=no])
-AS_IF([test "$with_libc_memset"    = yes], [with_libc_memset=yes],    [with_libc_memset=no])
-AS_IF([test "$with_libc_strcmp"    = yes], [with_libc_strcmp=yes],    [with_libc_strcmp=no])
-AS_IF([test "$with_libc_strcpy"    = yes], [with_libc_strcpy=yes],    [with_libc_strcpy=no])
-AS_IF([test "$with_libc_strlen"    = yes], [with_libc_strlen=yes],    [with_libc_strlen=no])
-AS_IF([test "$with_libc_strncmp"   = yes], [with_libc_strncmp=yes],   [with_libc_strncmp=no])
-AS_IF([test "$with_libc_strncpy"   = yes], [with_libc_strncpy=yes],   [with_libc_strncpy=no])
-AS_IF([test "$with_libc_strnlen"   = yes], [with_libc_strnlen=yes],   [with_libc_strnlen=no])
-AS_IF([test "$with_libc_strstr"    = yes], [with_libc_strstr=yes],    [with_libc_strstr=no])
+AS_IF([test "$with_libc"           = yes], [with_libc=yes],           [with_libc=no])
 
 
 
@@ -199,19 +155,7 @@ AM_CONDITIONAL([WITH_PRINTF_FMT],     [test "$with_printf_fmt"     = yes])
 AM_CONDITIONAL([WITH_UNITS],          [test "$with_units"          = yes])
 
 dnl Packages (disabled by default)
-AM_CONDITIONAL([WITH_LIBC_ATOI],      [test "$with_libc_atoi"      = yes])
-AM_CONDITIONAL([WITH_LIBC_ISDIGIT],   [test "$with_libc_isdigit"   = yes])
-AM_CONDITIONAL([WITH_LIBC_ISSPACE],   [test "$with_libc_isspace"   = yes])
-AM_CONDITIONAL([WITH_LIBC_MEMCPY],    [test "$with_libc_memcpy"    = yes])
-AM_CONDITIONAL([WITH_LIBC_MEMMOVE],   [test "$with_libc_memmove"   = yes])
-AM_CONDITIONAL([WITH_LIBC_MEMSET],    [test "$with_libc_memset"    = yes])
-AM_CONDITIONAL([WITH_LIBC_STRCMP],    [test "$with_libc_strcmp"    = yes])
-AM_CONDITIONAL([WITH_LIBC_STRCPY],    [test "$with_libc_strcpy"    = yes])
-AM_CONDITIONAL([WITH_LIBC_STRLEN],    [test "$with_libc_strlen"    = yes])
-AM_CONDITIONAL([WITH_LIBC_STRNCMP],   [test "$with_libc_strncmp"   = yes])
-AM_CONDITIONAL([WITH_LIBC_STRNCPY],   [test "$with_libc_strncpy"   = yes])
-AM_CONDITIONAL([WITH_LIBC_STRNLEN],   [test "$with_libc_strnlen"   = yes])
-AM_CONDITIONAL([WITH_LIBC_STRSTR],    [test "$with_libc_strstr"    = yes])
+AM_CONDITIONAL([WITH_LIBC],           [test "$with_libc"           = yes])
 
 
 
@@ -247,19 +191,7 @@ AS_IF([test "$with_printf_fmt"     = yes], [AC_DEFINE([WITH_PRINTF_FMT],     [1]
 AS_IF([test "$with_units",         = yes], [AC_DEFINE([WITH_UNITS],          [1], [with measurement units utils])])
 
 dnl Packages (disabled by default)
-AS_IF([test "$with_libc_atoi"      = yes], [AC_DEFINE([WITH_LIBC_ATOI],      [1], [with atoi replacement])])
-AS_IF([test "$with_libc_isdigit"   = yes], [AC_DEFINE([WITH_LIBC_ISDIGIT],   [1], [with isdigit replacement])])
-AS_IF([test "$with_libc_isspace"   = yes], [AC_DEFINE([WITH_LIBC_ISSPACE],   [1], [with isspace replacement])])
-AS_IF([test "$with_libc_memcpy"    = yes], [AC_DEFINE([WITH_LIBC_MEMCPY],    [1], [with memcpy replacement])])
-AS_IF([test "$with_libc_memmove"   = yes], [AC_DEFINE([WITH_LIBC_MEMMOVE],   [1], [with memmove replacement])])
-AS_IF([test "$with_libc_memset"    = yes], [AC_DEFINE([WITH_LIBC_MEMSET],    [1], [with memset replacement])])
-AS_IF([test "$with_libc_strcmp"    = yes], [AC_DEFINE([WITH_LIBC_STRCMP],    [1], [with strcmp replacement])])
-AS_IF([test "$with_libc_strcpy"    = yes], [AC_DEFINE([WITH_LIBC_STRCPY],    [1], [with strcpy replacement])])
-AS_IF([test "$with_libc_strlen"    = yes], [AC_DEFINE([WITH_LIBC_STRLEN],    [1], [with strlen replacement])])
-AS_IF([test "$with_libc_strncmp"   = yes], [AC_DEFINE([WITH_LIBC_STRNCMP],   [1], [with strncmp replacement])])
-AS_IF([test "$with_libc_strncpy"   = yes], [AC_DEFINE([WITH_LIBC_STRNCPY],   [1], [with strncpy replacement])])
-AS_IF([test "$with_libc_strnlen"   = yes], [AC_DEFINE([WITH_LIBC_STRNLEN],   [1], [with strnlen replacement])])
-AS_IF([test "$with_libc_strstr"    = yes], [AC_DEFINE([WITH_LIBC_STRSTR],    [1], [with strstr replacement])])
+AS_IF([test "$with_libc"           = yes], [AC_DEFINE([WITH_LIBC],           [1], [with atoi replacement])])
 
 
 
@@ -293,6 +225,7 @@ AM_INIT_AUTOMAKE([1.9 subdir-objects])
 AC_CONFIG_FILES([
   Makefile
   include/Makefile
+  libc/Makefile
   include/kernaux.h
   include/kernaux/console.h
 ])
