@@ -1,12 +1,10 @@
 /*
     We don't include <kernaux/asm/*.h> because they
     contain architecture-specific assembly functions.
-
-    We don't include <kernaux/libc.h> because it may
-    conflict with actual freestanding or hosted libc.
 */
 
 #include <kernaux/assert.h>
+
 @comment_line_cmdline@#include <kernaux/cmdline.h>
 @comment_line_console@#include <kernaux/console.h>
 @comment_line_elf@#include <kernaux/elf.h>
