@@ -1,0 +1,6 @@
+if WITH_LIBC
+nobase_include_HEADERS = \
+	ctype.h \
+	stdlib.h \
+	string.h
+endif
