@@ -1,0 +1,15 @@
+#ifndef _CTYPE_H
+#define _CTYPE_H 1
+
+#ifdef __cplusplus
+extern "C" {
+#endif
+
+int isdigit(int c);
+int isspace(int c);
+
+#ifdef __cplusplus
+}
+#endif
+
+#endif
