@@ -1,0 +1,14 @@
+#ifndef _STDLIB_H
+#define _STDLIB_H 1
+
+#ifdef __cplusplus
+extern "C" {
+#endif
+
+int atoi(const char *str);
+
+#ifdef __cplusplus
+}
+#endif
+
+#endif
