@@ -1,0 +1,18 @@
+// TODO: remove this file, require needed headers separately
+
+#ifndef KERNAUX_INCLUDED_LIBC
+#define KERNAUX_INCLUDED_LIBC
+
+#ifdef __cplusplus
+extern "C" {
+#endif
+
+#include <ctype.h>
+#include <stdlib.h>
+#include <string.h>
+
+#ifdef __cplusplus
+}
+#endif
+
+#endif
